# Ruggine-App

./: .env  .gitignore  CHAT_DELETION_ARCHITECTURE.md  CHAT_DELETION_SYSTEM.md  CHAT_PRIVATA_RISOLTO.md  Cargo.toml  DIPENDENZE_CARGO_BREVE.md  PRIVATE_CHAT_IMPROVEMENTS.md  README.md  docker-compose.yml  mobile_setup.md  redis.conf  setup_redis.ps1  startup.ps1
data/: ruggine_modulare.db
doc/: .env.production.example  CROSS_PLATFORM_SUPPORT.md  DOCUMENTAZIONE.md  ENCRYPTION.md  ENCRYPTION_INTEGRATION.md  GROUP_CHAT_FLOW.md  PRIVATE_CHAT_FLOW.md  QUICK_START.md  QUICK_START_WEBSOCKET.md  README.md  REQUEST_RESPONSE_FLOW.md  SESSION_AND_TLS.md  SESSION_FLOW.md  SETUP_GUIDE.md  TLS_PRODUCTION_SETUP.md  WEBSOCKET_ARCHITECTURE_DEEP_DIVE.md  deploy.md
doc/database/: README.md  api.md  deployment.md  indexes.md  migrations.md  monitoring.md  schema.md
ruggine/: .env  Cargo.toml  FEATURES.md  README.md  ruggine_data.json
ruggine/data/: .gitignore  ruggine.db
ruggine/migrations/: 001_initial_schema.sql  002_encryption_schema.sql  003_friendship_system.sql
ruggine/src/: lib.rs  main.rs
ruggine/src/client/: config.rs  gui_app.rs  gui_main.rs  main.rs  main_new.rs  main_old.rs  mobile_main.rs  mod.rs  network_manager.rs
ruggine/src/common/: crypto.rs  mod.rs  models.rs  protocol.rs
ruggine/src/server/: chat_manager.rs  config.rs  connection.rs  database.rs  main.rs  mod.rs
ruggine/src/utils/: logger.rs  mod.rs  performance.rs
ruggine_modulare/: .env  Cargo.toml  DOCUMENTAZIONE.md
ruggine_modulare/data/: ruggine_modulare.db
ruggine_modulare/src/: main.rs
ruggine_modulare/src/client/: cli_client.rs  mod.rs
ruggine_modulare/src/client/gui/: app.rs  mod.rs
ruggine_modulare/src/client/gui/views/: friend_requests.rs  group_chat.rs  main_actions.rs  mod.rs  private_chat.rs  registration.rs
ruggine_modulare/src/client/gui/widgets/: alert.rs  input_section.rs  mod.rs
ruggine_modulare/src/client/models/: app_state.rs  messages.rs
ruggine_modulare/src/client/services/: chat_service.rs  connection.rs  friend_service.rs  group_service.rs  message_parser.rs  mod.rs
ruggine_modulare/src/client/utils/: cache.rs  constants.rs
ruggine_modulare/src/common/: crypto.rs  mod.rs  models.rs
ruggine_modulare/src/server/: auth.rs  chat_manager.rs  config.rs  connection.rs  database.rs  groups.rs  main.rs  messages.rs  mod.rs  users.rs
ruggine_modulare/src/utils/: mod.rs  performance.rs
src/: lib.rs  main.rs
src/client/: cli_client.rs
src/client/gui/: app.rs  mod.rs
src/client/gui/views/: create_group.rs  friend_requests.rs  group_chat.rs  invite_to_group.rs  logger.rs  main_actions.rs  mod.rs  my_group_invites.rs  my_groups.rs  private_chat.rs  registration.rs  send_friend_request.rs  users_list.rs  view_friends.rs
src/client/gui/widgets/: alert.rs  input_section.rs  message_list.rs
src/client/models/: app_state.rs  messages.rs  mod.rs  ui_state.rs
src/client/services/: chat_service.rs  message_parser.rs  mod.rs  users_service.rs  websocket_client.rs  websocket_service.rs
src/client/utils/: mod.rs  session_store.rs
src/common/: crypto.rs
src/server/: auth.rs  chat_manager.rs  config.rs  connection.rs  database.rs  groups.rs  main.rs  messages.rs  mod.rs  presence.rs  redis_cache.rs  users.rs  websocket.rs
src/utils/: performance.rs
