
[package]
name = "ruggine_modulare"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
iced = { version = "0.12", features = ["tokio", "debug"] }
iced_aw = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
sysinfo = "0.30"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "macros"] }
anyhow = "1.0"
dotenvy = "0.15"
argon2 = "0.5"
rand = "0.8"
ring = "0.17"
base64 = "0.22"
md5 = "0.7"
keyring = "1.1"
rustls = "0.21"
tokio-rustls = "0.24"
rustls-pemfile = "1.0"
# WebSocket dependencies
tokio-tungstenite = "0.21"
futures-util = "0.3"
url = "2.5"
# Redis dependencies  
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

[features]
default = ["client", "server"]
server = []
client = []

[lib]
name = "ruggine_modulare"
path = "src/lib.rs"

[[bin]]
name = "ruggine-server"
path = "src/server/main.rs"

[[bin]]
name = "ruggine-gui"
path = "src/main.rs"

[[bin]]
name = "chat_test"
path = "src/bin/chat_test.rs"

[[bin]]
name = "db_inspect"
path = "src/bin/db_inspect.rs"

# Target cross-platform
[package.metadata]
targets = ["x86_64-pc-windows-msvc", "x86_64-unknown-linux-gnu", "x86_64-apple-darwin"]
