[package]
name = "ruggine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.27"
sysinfo = "0.30"

[features]
default = ["client", "server"]  # Abilita entrambe per default
server = []
client = []

[[bin]]
name = "ruggine-server"
path = "src/server/main.rs"

[[bin]]
name = "ruggine-client"
path = "src/client/main.rs"
