[package]
name = "ruggine_modulare"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.10", features = ["tokio"] }
tokio = { version = "1.37", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
md5 = "0.7"
